--- a/ProAcc/Views/Customers/Create.cshtml
+++ b/ProAcc/Views/Customers/Create.cshtml
@@ -28,7 +28,6 @@
                 <label class="control-label col-md-4 required">Customer Name</label>
                 <div class="col-md-10">
                     <input type="text" class="form-control" id="txtCompanyName" />
-                    @*<span id="lblCompanyName" style="color:red" />*@
                 </div>
                 <div>
                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblCompanyName">&nbsp;</span>
@@ -51,21 +50,10 @@
                 </div>
             </div>
 
-            @*<div class="form-group">
-                    <label class="control-label col-md-4 required">Industry Sector</label>
-                    <div class="col-md-10">
-                        <input type="text" class="form-control" id="txtIndustrySector" />
-                    </div>
-                    <div>
-                        &nbsp;&nbsp;&nbsp;<span id="lblIndustrySector">&nbsp;</span>
-                    </div>
-                </div>*@
-
             <div class="form-group">
                 <label class="control-label col-md-5 required">Contact Person Name</label>
                 <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtContact" />
-                    @*<span id="lblCustomerEmail" style="color:red" />*@
+                    <input type="text" class="form-control" id="txtContact" />                    
                 </div>
                 <div>
                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblContact">&nbsp;</span>
@@ -79,8 +67,7 @@
             <div class="form-group">
                 <label class="control-label col-md-5 required">Contact Person Email</label>
                 <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtCustomerEmail" />
-                    @*<span id="lblCustomerEmail" style="color:red" />*@
+                    <input type="text" class="form-control" id="txtCustomerEmail" />                   
                 </div>
                 <div>
                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblCustomerEmail">&nbsp;</span>
@@ -154,6 +141,7 @@
         $('#txtCompanyName').on('focusout', function () {
 
             var CompName = $("#txtCompanyName").val().trim();
+            CompName = CompName.replace(/,/g, " ");
             var id = $("#customerid").val();
             if (CompName == "") {
                 $("#lblCompanyName").html("Please Enter valid Customer Name").show().fadeOut(5000);
@@ -219,6 +207,7 @@
         $('#txtContact').on('focusout', function () {
 
             var ContactName = $("#txtContact").val().trim();
+            ContactName = ContactName.replace(/,/g, " ");
             if (ContactName == "") {
                 $("#lblContact").html("Please Enter valid Contact Person Name").show().fadeOut(5000);
                 validatecustomer()
@@ -358,8 +347,10 @@
     $("#btnCustomerCreate").on("click", function () {
         //debugger;
         var CompanyName = $("#txtCompanyName").val().trim();
+         CompanyName = CompanyName.replace(/,/g, " ");
         var IndustrySector = $("#drpIndustrySector").val();
-         var Contact=$("#txtContact").val().trim();
+        var Contact = $("#txtContact").val().trim();
+        Contact = Contact.replace(/,/g, " ");
         //var custphone = $("#txtCustomerPhone").val().trim();
         var SelectedCountrycode = $("#selectedCountry").val();
         var custphone = $("#txtCustomerPhone").val().trim();
