--- a/ProAcc/Views/Customers/Index.cshtml
+++ b/ProAcc/Views/Customers/Index.cshtml
@@ -118,73 +118,31 @@
         });
     });
 
-    @*$(".btnDelete").on("click", function () {
-        var id = $(this).next().val();
-       var retVal = confirm("Do you want to delete ?");
-               if( retVal == true ) {
-                $.ajax({
-                type: "POST",
-                url: '@Url.Action("Delete","Customers")',
-                data: { id:id },
-                dataType: "json",
-                success: function (response) {
-                    if (response == "success") {
-                        $.alert({
-                            title: 'Success !',
-                            content: 'Customer deleted <strong>Successfully</strong>..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
-                            icon: 'fa fa-rocket',
-                            animation: 'scale',
-                            closeAnimation: 'scale',
-                            buttons: {
-                                okay: {
-                                    text: 'Okay',
-                                    btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
-                                    action: function (event, ui) {
-
-                                        // $(this).remove();
-                                        //var url = $("#RedirectToCustomerList").val();
-                                        // location.href = url;
-
-                                        location.reload();
-                                        $("#txtCompanyName").val("");
-                                        $("#txtIndustrySector").val("");
-                                        $("#txtCustomerPhone").val("");
-                                        $("#txtCustomerEmail").val("");
-                                        $("#btnCustomerUpdate").hide();
-                                        $("#btnCustomerCreate").show();
-                                    }
-                                }
-                            }
-                        });
-
-                        alert("Customer deleted successfully!");
-                        location.reload();
-                        //loadCustomer();
-                        $("#txtCompanyName").val("");
-                        $("#txtIndustrySector").val("");
-                        $("#txtCustomerPhone").val("");
-                        $("#txtCustomerEmail").val("");
-                        $("#btnCustomerUpdate").hide();
-                        $("#btnCustomerCreate").show();
-                    }
-                    else {
-                        alert("Customer Project is on live");
-                    }
-                },
-                failure: function (response) {
-                    alert(response.responseText);
-                },
-                error: function (response) {
-                    alert(response.responseText);
-                }
-            });
-                  return true;
-               } else {
-                  return false;
-               }
-    });*@
-
     $(".btnDelete").on("click", function () {
+        var id = $(this).next().val();
+         Notiflix.Confirm.Show(
+                'Confirm',
+                'Do you want to delete ?',
+                'Yes', 'No',
+                function () {
+                    $.ajax({
+                        type: "POST",
+                        url: '@Url.Action("Delete","Customers")',
+                        data: { id: id },
+                        dataType: "json",
+                        success: function (response) {
+                            if (response == "success") {
+                                Notiflix.Notify.Success('Customers deleted Successfully..!', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
+                                setTimeout(location.reload(), 3000);
+                            }
+                        }
+                    });
+                }, function () {
+                   
+                }
+            )
+    });
+    @*$(".btnDelete").on("click", function () {
         var id = $(this).next().val();
         $.confirm({
               title: 'Delete !',
@@ -262,5 +220,5 @@
                  },
               }
          });
-    });
+    });*@
 </script>
