--- a/ProAcc/Views/ProjectMonitor/ConvertionMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/ConvertionMonitor.cshtml
@@ -6,7 +6,7 @@
 @Styles.Render("~/Content/css/jqGrid")
 @Scripts.Render("~/bundles/Scripts/jqGrid")
 <style>
-    .wrapColumnText {
+     .wrapColumnText {
         white-space: normal !important;
         height: auto;
         vertical-align: text-top;
@@ -14,6 +14,15 @@
 
     .fit_Data {
         width: fit-content;
+    }
+
+    .ui-jqgrid .ui-jqgrid-labels th.ui-th-column {
+        background-color: orange;
+        background-image: none
+    }
+
+    #info_dialog {
+        margin-left: 150vh;
     }
 </style>
 <a class="card-title">Conversion Monitor</a>
@@ -68,45 +77,9 @@
     }
 </style>
 <hr />
-<div class="row instanceRow" style="padding: 1em;">
-    <div class="col-lg-12 card">
-        <div class="row">
-            @if (User.IsInRole("Consultant") || User.IsInRole("Admin"))
-            {
-                <div class="col-md-4">
-                    <div class="position-relative form-group">
-                        <label for="exampleEmail" class="">Customer Name</label>
-                        @Html.DropDownList("Customer", (IEnumerable<SelectListItem>)ViewBag.Customer, "-Select-", new { id = "IDCustomer", @class = "form-control" })
-                        @*@Html.DropDownList("Project", (IEnumerable<SelectListItem>), "- SELECT-", new { id = "IDProject", @class = "form-control" })*@
-                    </div>
-                </div>
-            }
-            <div class="col-md-4">
-                <label class="">Project Name</label>
-                @if (User.IsInRole("Customer") || User.IsInRole("Project Manager"))
-                {
-                    @Html.DropDownList("Project", (IEnumerable<SelectListItem>)ViewBag.Project, "-Select-", new { id = "IDProject", @class = "form-control" })
-                }
-                else
-                {
-                    @Html.DropDownList("Project", new SelectList(Enumerable.Empty<SelectListItem>(), "IDProject", "ProjectName"),
-                           "Select a Customer", new { id = "IDProject", @class = "form-control" })
-                }
-            </div>
-            <div class="col-md-2">
-                <label for="exampleEmail" class="">Instance Name</label>
-                @Html.DropDownList("Instance", new SelectList(Enumerable.Empty<SelectListItem>(), "IDInstance", "InstanceName"),
-                "-Select-", new { id = "IDInstance", @class = "form-control" })
-            </div>
-            <div class="col-md-2">
-                <label for="exampleEmail" class="">.</label>
-                <button class="btn-wide mb-2 mr-2 btn btn-primary form-control" id="SubmitInstance">
-                    Select Instance
-                </button>
-            </div>
-        </div>
-    </div>
-</div>
+@{
+    Html.RenderAction("InstanceSelection", "ProjectMonitor");
+}
 <div style="margin-top:20px">
     @*<table id="jqGrid"></table>
         <div id="jqGridPager"></div>*@
