--- a/ProAcc/Views/User/Edit.cshtml
+++ b/ProAcc/Views/User/Edit.cshtml
@@ -71,7 +71,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                     <label class="control-label col-md-4 required">Contact Person Phone</label>
                     <div class="col-md-10">
                         <input type="text" class="form-control" maxlength="10" id="txtMobile" value="@Model.Phone" />
@@ -79,19 +79,19 @@
                     <div>
                         &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblMobile">&nbsp;</span>
                     </div>
-            </div>
+            </div>*@
 
-            @*<div class="form-group">
+            <div class="form-group">
                 <label class="control-label col-md-5 required">Contact Person Phone</label>
                 <div class="col-md-10">
                     <input type="hidden" class="form-control" value="@Model.Countrycode" id="selectedCountry">
-                    <input type="tel" class="form-control" id="txtMobile" value="@Model.Phone" style="width: 150%;">
+                    <input type="tel" class="form-control" id="txtMobile" value="@Model.Phone" style="width: 135%;">
                 </div>
                 <div>
                     &nbsp;&nbsp;&nbsp; <span id="valid-msg" class="hide Class_span">&nbsp;</span>
                     &nbsp;&nbsp;&nbsp;<span id="error-msg" class="hide Class_span">&nbsp;</span>
                 </div>
-            </div>*@
+            </div>
 
         </div>
 
@@ -248,9 +248,23 @@
             ValidateUser();
          });
 
-        $('#userMasterName').on('focusout', function () {
+          var typingTimer;                //timer identifier
+        var doneTypingInterval = 1000;  //time in ms, 1 second for example
 
+       // on keyup, start the countdown
+         $('#userMasterName').on('keyup', function () {
+          clearTimeout(typingTimer);
+          typingTimer = setTimeout(userMasterNameCheck, doneTypingInterval);
+        });
+
+        //on keydown, clear the countdown
+         $('#userMasterName').on('keydown', function () {
+          clearTimeout(typingTimer);
+         });
+
+        function userMasterNameCheck() {
             var userMasterName = $("#userMasterName").val().trim();
+             userMasterName = userMasterName.replace(/,/g, " ");
             var id = $("#UserId").val().trim();
             if (userMasterName == "") {
                 $("#lblName1").html("Please Enter valid Name").show();
@@ -271,7 +285,6 @@
                         $("#lblName1").html("");
                         ValidateUser();
                     }
-
                 },
                 error: function (err) {
 
@@ -280,7 +293,12 @@
             });
             }
 
-         });
+        }
+
+        //$('#userMasterName').on('focusout', function () {
+
+
+        // });
     });
 
 
@@ -299,70 +317,70 @@
          ValidateUser()
      });
 
-    $("#txtMobile").blur(function () {
+    //$("#txtMobile").blur(function () {
 
-            phone = $(this).val();
-            phone = phone.replace(/[^0-9]/g,'');
-            if (phone.length != 10) {
-                $("#lblMobile").html("Phone number must be 10 digits").show().fadeOut(2000);
-                 ValidateUser();
-            }
-            else {
-                $("#lblMobile").html("").hide();
-                 ValidateUser();
-            }
-            ValidateUser();
-     });
-
-    //var input = document.querySelector("#txtMobile"),
-    //    errorMsg = document.querySelector("#error-msg"),
-    //    validMsg = document.querySelector("#valid-msg");
-        
-    //// Error messages based on the code returned from getValidationError
-    //var errorMap = ["Invalid number", "Invalid country code", "Too short", "Too long", "Invalid number"];
-    //    //input.setCountry("gb");
-    //    var intl = window.intlTelInput(input, {
-    //    utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/utils.js"
-    //    //utilsScript: "~/Asset/js/utils.js"
-    //});
-
-    //var reset = function() {
-    //    input.classList.remove("error");
-    //    errorMsg.innerHTML = "";
-    //    errorMsg.classList.add("hide");
-    //    validMsg.classList.add("hide");
-    //};
-         
-    //    var iti = window.intlTelInputGlobals.getInstance(input);
-    //    //iti.setCountry("in");
-    //    var a = $("#selectedCountry").val();
-    //    iti.setCountry(a);
-
-    //     var countryCode;
-    //    input.addEventListener('countrychange', function () {
-    //        countryCode = intl.getSelectedCountryData().iso2;
-    //        $("#selectedCountry").val(countryCode);
-    //       //alert(countryCode)
-    //    })
-    //    // Validate on blur event   
-    //    input.addEventListener('blur', function () {
-
-    //    reset();
-    //    if(input.value.trim()){
-    //        if(intl.isValidNumber()){
-    //            validMsg.classList.remove("hide");
-    //        }else{
-    //            input.classList.add("error");
-    //            var errorCode = intl.getValidationError();
-    //            errorMsg.innerHTML = errorMap[errorCode];
-    //            errorMsg.classList.remove("hide");
+    //        phone = $(this).val();
+    //        phone = phone.replace(/[^0-9]/g,'');
+    //        if (phone.length != 10) {
+    //            $("#lblMobile").html("Phone number must be 10 digits").show().fadeOut(2000);
+    //             ValidateUser();
     //        }
-    //    }
-    //});
+    //        else {
+    //            $("#lblMobile").html("").hide();
+    //             ValidateUser();
+    //        }
+    //        ValidateUser();
+    // });
 
-    //// Reset on keyup/change event
-    //input.addEventListener('change', reset);
-    //    input.addEventListener('keyup', reset);
+        var input = document.querySelector("#txtMobile"),
+            errorMsg = document.querySelector("#error-msg"),
+            validMsg = document.querySelector("#valid-msg");
+
+        // Error messages based on the code returned from getValidationError
+        var errorMap = ["Invalid number", "Invalid country code", "Too short", "Too long", "Invalid number"];
+            //input.setCountry("gb");
+        var intl = window.intlTelInput(input, {
+            utilsScript: "../../Asset/js/utils.js",
+             separateDialCode: true
+        });
+
+        var reset = function() {
+            input.classList.remove("error");
+            errorMsg.innerHTML = "";
+            errorMsg.classList.add("hide");
+            validMsg.classList.add("hide");
+        };
+
+            var iti = window.intlTelInputGlobals.getInstance(input);
+            //iti.setCountry("in");
+            var a = $("#selectedCountry").val();
+            iti.setCountry(a);
+
+             var countryCode;
+            input.addEventListener('countrychange', function () {
+                countryCode = intl.getSelectedCountryData().iso2;
+                $("#selectedCountry").val(countryCode);
+               //alert(countryCode)
+            })
+            // Validate on blur event
+            input.addEventListener('blur', function () {
+
+            reset();
+            if(input.value.trim()){
+                if(intl.isValidNumber()){
+                    validMsg.classList.remove("hide");
+                }else{
+                    input.classList.add("error");
+                    var errorCode = intl.getValidationError();
+                    errorMsg.innerHTML = errorMap[errorCode];
+                    errorMsg.classList.remove("hide");
+                }
+            }
+        });
+
+        // Reset on keyup/change event
+        input.addEventListener('change', reset);
+            input.addEventListener('keyup', reset);
 
     $("#txtUserEmail").on("blur", function (event) {
 
@@ -514,6 +532,7 @@
 
         var id = $("#UserId").val().trim();
         var userMasterName = $("#userMasterName").val().trim();
+        userMasterName = userMasterName.replace(/,/g, " ");
         var SelectedCountrycode = $("#selectedCountry").val();
         var Mobile = $("#txtMobile").val().trim();
         var Email = $("#txtUserEmail").val().trim();
