--- a/ProAcc/Views/Customers/GetCustomerById.cshtml
+++ b/ProAcc/Views/Customers/GetCustomerById.cshtml
@@ -76,7 +76,7 @@
                 </div>
             </div>
 
-            @*<div class="form-group">
+            <div class="form-group">
                 <label class="control-label col-md-5 required">Contact Person Phone</label>
                 <div class="col-md-10">
                     <input type="text" class="form-control" value="@Model.Phone" id="txtCustomerPhone" maxlength="10" />
@@ -84,8 +84,8 @@
                 <div>
                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblCustomerPhone">&nbsp;</span>
                 </div>
-            </div>*@
-            <div class="form-group">
+            </div>
+            @*<div class="form-group">
                 <label class="control-label col-md-5 required">Contact Person Phone</label>
                 <div class="col-md-10">
                     <input type="hidden" class="form-control" value="@Model.Countrycode" id="selectedCountry">
@@ -95,7 +95,7 @@
                     &nbsp;&nbsp;&nbsp; <span id="valid-msg" class="hide Class_span">&nbsp;</span>
                     &nbsp;&nbsp;&nbsp;<span id="error-msg" class="hide Class_span">&nbsp;</span>
                 </div>
-            </div>
+            </div>*@
         </div>
 
         @*<div class="form-group">
@@ -186,70 +186,118 @@
             }
         });
 
-       // $("#txtCustomerPhone").blur(function () {
-       //     //debugger
-       //     phone = $(this).val();
-       //     phone = phone.replace(/[^0-9]/g,'');
-       //     if (phone.length != 10) {
-       //         $("#lblCustomerPhone").html("Phone number must be 10 digits").show().fadeOut(5000);
-       //         validatecustomer();
-       //     }
-       //     else {
-       //         $("#lblCustomerPhone").html("").hide();
-       //         validatecustomer();
-       //     }
-
-       //});
-
-        var input = document.querySelector("#txtCustomerPhone"),
-        errorMsg = document.querySelector("#error-msg"),
-        validMsg = document.querySelector("#valid-msg");
-        
-    // Error messages based on the code returned from getValidationError
-    var errorMap = ["Invalid number", "Invalid country code", "Too short", "Too long", "Invalid number"];
-        var intl = window.intlTelInput(input, {        
-            //utilsScript: "/Asset/js/utils.js",
-            utilsScript: "../../Asset/js/utils.js",
-            separateDialCode: true 
-    });
-
-    var reset = function() {
-        input.classList.remove("error");
-        errorMsg.innerHTML = "";
-        errorMsg.classList.add("hide");
-        validMsg.classList.add("hide");
-    };
-
-        var iti = window.intlTelInputGlobals.getInstance(input);
-        var a = $("#selectedCountry").val();
-        iti.setCountry(a);
-
-         var countryCode;
-        input.addEventListener('countrychange', function () {
-            countryCode = intl.getSelectedCountryData().iso2;
-            $("#selectedCountry").val(countryCode);
-            $("#txtCustomerPhone").val("");
-        })
-        // Validate on blur event   
-        input.addEventListener('blur', function () {
-
-        reset();
-        if(input.value.trim()){
-            if(intl.isValidNumber()){
-                validMsg.classList.remove("hide");
-            }else{
-                input.classList.add("error");
-                var errorCode = intl.getValidationError();
-                errorMsg.innerHTML = errorMap[errorCode];
-                errorMsg.classList.remove("hide");
+        $("#txtCustomerPhone").blur(function () {
+            //debugger
+            phone = $(this).val();
+            phone = phone.replace(/[^0-9]/g,'');
+            if (phone.length != 10) {
+                $("#lblCustomerPhone").html("Phone number must be 10 digits").show().fadeOut(5000);
+                validatecustomer();
             }
-            validatecustomer();
-        }
-    });
+            else {
+                $("#lblCustomerPhone").html("").hide();
+                validatecustomer();
+            }
 
-        // Reset on keyup/change event
-        input.addEventListener('change', reset);
-        input.addEventListener('keyup', reset);
+       });
+
+    //    var input = document.querySelector("#txtCustomerPhone"),
+    //    errorMsg = document.querySelector("#error-msg"),
+    //    validMsg = document.querySelector("#valid-msg");
+        
+    //// Error messages based on the code returned from getValidationError
+    //var errorMap = ["Invalid number", "Invalid country code", "Too short", "Too long", "Invalid number"];
+    //    var intl = window.intlTelInput(input, {        
+    //        //utilsScript: "/Asset/js/utils.js",
+    //        utilsScript: "../../Asset/js/utils.js",
+    //        separateDialCode: true 
+    //});
+
+    //var reset = function() {
+    //    input.classList.remove("error");
+    //    errorMsg.innerHTML = "";
+    //    errorMsg.classList.add("hide");
+    //    validMsg.classList.add("hide");
+    //};
+
+    //    var iti = window.intlTelInputGlobals.getInstance(input);
+    //    var a = $("#selectedCountry").val();
+    //    iti.setCountry(a);
+
+    //     var countryCode;
+    //    input.addEventListener('countrychange', function () {
+    //        countryCode = intl.getSelectedCountryData().iso2;
+    //        $("#selectedCountry").val(countryCode);
+    //        $("#txtCustomerPhone").val("");
+    //    })
+    //    // Validate on blur event   
+    //    input.addEventListener('blur', function () {
+
+    //    reset();
+    //    if(input.value.trim()){
+    //        if(intl.isValidNumber()){
+    //            validMsg.classList.remove("hide");
+    //        }else{
+    //            input.classList.add("error");
+    //            var errorCode = intl.getValidationError();
+    //            errorMsg.innerHTML = errorMap[errorCode];
+    //            errorMsg.classList.remove("hide");
+    //        }
+    //        validatecustomer();
+    //    }
+    //});
+
+    //    // Reset on keyup/change event
+    //    input.addEventListener('change', reset);
+    //    input.addEventListener('keyup', reset);    //    var input = document.querySelector("#txtCustomerPhone"),
+    //    errorMsg = document.querySelector("#error-msg"),
+    //    validMsg = document.querySelector("#valid-msg");
+        
+    //// Error messages based on the code returned from getValidationError
+    //var errorMap = ["Invalid number", "Invalid country code", "Too short", "Too long", "Invalid number"];
+    //    var intl = window.intlTelInput(input, {        
+    //        //utilsScript: "/Asset/js/utils.js",
+    //        utilsScript: "../../Asset/js/utils.js",
+    //        separateDialCode: true 
+    //});
+
+    //var reset = function() {
+    //    input.classList.remove("error");
+    //    errorMsg.innerHTML = "";
+    //    errorMsg.classList.add("hide");
+    //    validMsg.classList.add("hide");
+    //};
+
+    //    var iti = window.intlTelInputGlobals.getInstance(input);
+    //    var a = $("#selectedCountry").val();
+    //    iti.setCountry(a);
+
+    //     var countryCode;
+    //    input.addEventListener('countrychange', function () {
+    //        countryCode = intl.getSelectedCountryData().iso2;
+    //        $("#selectedCountry").val(countryCode);
+    //        $("#txtCustomerPhone").val("");
+    //    })
+    //    // Validate on blur event   
+    //    input.addEventListener('blur', function () {
+
+    //    reset();
+    //    if(input.value.trim()){
+    //        if(intl.isValidNumber()){
+    //            validMsg.classList.remove("hide");
+    //        }else{
+    //            input.classList.add("error");
+    //            var errorCode = intl.getValidationError();
+    //            errorMsg.innerHTML = errorMap[errorCode];
+    //            errorMsg.classList.remove("hide");
+    //        }
+    //        validatecustomer();
+    //    }
+    //});
+
+    //    // Reset on keyup/change event
+    //    input.addEventListener('change', reset);
+    //    input.addEventListener('keyup', reset);
 
 
 
@@ -281,8 +329,8 @@
             var lblCompanyName = $("#lblCompanyName").text().trim();
             var lblIndustrySector = $("#lblIndustrySector").text().trim();
             var lblContact = $("#lblContact").text().trim();
-            //var lblcustphone = $("#lblCustomerPhone").text().trim();
-            var lblcustphone = $("#error-msg").text().trim();
+            var lblcustphone = $("#lblCustomerPhone").text().trim();
+            //var lblcustphone = $("#error-msg").text().trim();
             var lblcustEmail = $("#lblCustomerEmail").text().trim();
 
 
@@ -341,8 +389,8 @@
         }
         else if (custphone=="")
          {
-             $("#error-msg").html("Please enter the Customer Phone").show().fadeOut(2000);
-            //$("#lblCustomerPhone").html("Please enter the Customer Phone").show().fadeOut(2000);
+            // $("#error-msg").html("Please enter the Customer Phone").show().fadeOut(2000);
+            $("#lblCustomerPhone").html("Please enter the Customer Phone").show().fadeOut(2000);
         }
         else if (custEmail=="")
         {
