--- a/ProAcc/Views/Resource/ResourceAllocation.cshtml
+++ b/ProAcc/Views/Resource/ResourceAllocation.cshtml
@@ -131,7 +131,7 @@
 
                 },
                 {
-                    label: 'Building Block', name: 'BuldingBlockID', index: 'BuldingBlockID', width: 70,
+                    label: 'Building Block', name: 'BuldingBlockID', index: 'BuldingBlockID', width: 70,classes: 'wrapColumnText' ,
                     sortable: false, align: 'Left', editable: true, edittype: 'custom',
                     cellEdit: true, edittype: 'select', formatter: 'select',
                     editoptions: {
