--- a/ProAcc/Views/Report/AuditReports.cshtml
+++ b/ProAcc/Views/Report/AuditReports.cshtml
@@ -89,9 +89,13 @@
 
     $("#StartDate").datepicker({
         dateFormat: "dd-M-yy",
+         changeYear: true,
+            changeMonth: true,
      });
      $('#EndDate').datepicker({         
          dateFormat: "dd-M-yy",
+          changeYear: true,
+            changeMonth: true,
      });   
 
     function loadAuditReport() {
