--- a/ProAcc/Views/ProjectCreation/_PMTaskCreate.cshtml
+++ b/ProAcc/Views/ProjectCreation/_PMTaskCreate.cshtml
@@ -37,7 +37,7 @@
             <div class="form-group">
                 <label class="control-label col-md-4 required">Task Name</label>
                 <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtTaskName" />
+                    <input type="text" class="form-control" id="txtTaskName" maxlength="1000"/>
                     @*<span id="lblProjectName" style="color:red" />*@
                 </div>
                 <div>
